--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 /* Backgrounds */
 body{
-  background-color:#f9fbff;
+  background-color:#fefffe;;
   margin:0px;
   padding:0px;
 }
@@ -45,7 +45,6 @@ header{
   position:relative;
   width:100%;
   height:50vw;
-  min-height:500px;
   overflow:hidden;
   background-color:#636A7E;
 }
@@ -56,7 +55,19 @@ header{
   top:-15%;
   left:0;
   width:100%;
-  min-width:1000px;
+}
+
+a{
+  text-decoration: none;
+  color:#636A7E;
+  position:relative;
+  /*transition: top ease 0.5s;*/
+}
+
+a:hover{
+  color:rgba(230,180,0,100%);
+  top:-2px;
+  font-size:1.5vw;
 }
 
 .staticwords{
