--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ a:hover{
   font-weight:normal;
   font-size:19vw;
   color:#fff;
-  text-shadow:0px 0px 15px rgba(230,180,0,100%);
+  text-shadow:0px 0px 15px #000;
   position:absolute;
   top:30%;
 }
