--- a/style.css
+++ b/style.css
@@ -84,10 +84,15 @@ header{
   }
 
 .bodysection{
-  position:relative;
+  position:absolute;
   width:100%;
-  height:50vw;
+  bottom:0px;
+  top:81px;
   overflow:hidden;
+  background:url("source/Picture1.png");
+  background-size:cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 
@@ -107,6 +112,14 @@ header{
   top:25%;
   line-height:175%;
   font-size:1.5vw;
+  /*background:red;*/
+}
+
+@media(max-width:700px){
+.staticwords{
+  font-size:2.5vw;
+  width:60vw;
+  }
 }
 
 #design{
@@ -124,6 +137,12 @@ header{
   text-shadow:0px 0px 15px rgba(230,180,0,100%);
   position:absolute;
   top:30%;
+}
+
+@media(max-width:700px){
+.rotatingwords{
+  font-size:33vw;
+  }
 }
 
 .overlaytext{
@@ -148,7 +167,7 @@ header{
     right: 0;
     bottom: 0;
     left: 0;
-    overflow:hidden;
+    /*overflow:hidden;*/
     background-color: transparent;
     line-height: 100%;
     z-index: 99999;
@@ -157,7 +176,10 @@ header{
     -moz-transition: opacity 800ms ease-in;
     transition: opacity 800ms ease-in;
     pointer-events: none;
-    height:50vw;
+    background:url("source/Picture2.png");
+    background-size:cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .proj-modal:target {
