--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ header{
   font-weight:normal;
   font-size:19vw;
   color:#fff;
-  text-shadow:0px 0px 15px rgba(230,180,0,100%);
+  text-shadow:0px 0px 15px #e6b400;
   position:absolute;
   top:30%;
 }
