--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ header{
   width:100%;
   text-align:center;
   font-family:"brush";
-  font-weight:normal;
+  font-weight:lighter;
   font-size:19vw;
   color:#fff;
   text-shadow:0px 0px 15px #e6b400;
