--- a/style.css
+++ b/style.css
@@ -131,13 +131,12 @@ header{
   width:100%;
   text-align:center;
   font-family:"brush";
-  font-weight:bold;
+  font-weight:normal;
   font-size:19vw;
   color:#fff;
   text-shadow:0px 0px 15px #e6b400;
   position:absolute;
   top:30%;
-  -webkit-font-smoothing: antialiased;
 }
 
 @media(max-width:700px){
