--- a/style.css
+++ b/style.css
@@ -137,6 +137,9 @@ header{
   text-shadow:0px 0px 15px #e6b400;
   position:absolute;
   top:30%;
+  -webkit-font-smoothing: antialiased;
+  -moz-font-smoothing: antialiased;
+  font-smoothing: antialiased;
 }
 
 @media(max-width:700px){
