--- a/style.css
+++ b/style.css
@@ -137,9 +137,7 @@ header{
   text-shadow:0px 0px 15px #e6b400;
   position:absolute;
   top:30%;
-  -webkit-font-smoothing: antialiased;
-  -moz-font-smoothing: antialiased;
-  font-smoothing: antialiased;
+  text-stroke:0.2px;
 }
 
 @media(max-width:700px){
