--- a/style.css
+++ b/style.css
@@ -61,7 +61,8 @@ body{
 }
 
 header{
-  background-color:#fefffe;
+  /*background-color:#fefffe;*/
+  background-color:yellow;
   position:relative;
   height:81px;
   color:#636A7E;
