--- a/style.css
+++ b/style.css
@@ -61,8 +61,7 @@ body{
 }
 
 header{
-  /*background-color:#fefffe;*/
-  background-color:yellow;
+  background-color:#fefffe;
   position:relative;
   height:81px;
   color:#636A7E;
