--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ header{
   bottom:0px;
   top:81px;
   overflow:hidden;
-  background:url("source/Backgroundtext.svg"),url("source/Picture1.png");
+  background:url("source/Text.svg"),url("source/Picture1.png");
   background-size:cover;
   background-position: center;
   background-repeat: no-repeat;
