--- a/style.css
+++ b/style.css
@@ -467,13 +467,11 @@ hr{
   .rotatingwords{
     font-size:calc(100px + 32vw);
   }
-  body{
-  background-color:red;
-  }
 }
 
-@media only screen AND (min-device-width : 768px) AND (max-device-width : 1024px) AND (orientation : portrait) { 
+@media only screen AND (max-device-width : 768px) AND (max-device-width : 1024px) AND (orientation : portrait) { 
   .rotatingwords{
     font-size:calc(100px + 20vw);
   }
 }
+
