--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ header{
 
 .portfolioblock{
   background-color:yellow;
-  background-color: rgba(39,38,44,40%);
+  background-color: rgba(39,38,44,0.4);
 }
 
 
