--- a/style.css
+++ b/style.css
@@ -464,7 +464,7 @@ hr{
 }
 
 /* PHONE SUPPORT */
-@media ALL and (max-aspect-ratio: 10/16) { 
+@media ALL and (max-aspect-ratio: 11/16) and (orientation : portrait){ 
   .rotatingwords{
     font-size:calc(100px + 30vw);
   }
