--- a/style.css
+++ b/style.css
@@ -18,28 +18,32 @@ h1, h2, h3, h4 {
 }
 
 h1{
-  font-size:2.5em;
+  font-size:2.9em;
   font-weight:400;
   letter-spacing: 5px;
+  text-shadow:0px 0px 15px #e6b400;
+  color:#fff;
 }
 
 h2{
-  font-size:1.75em;
+  font-size:2.25em;
   font-weight:400;
   letter-spacing: 5px;
 }
 
 
 h3 {
-  font-size:1.65em;
-  font-weight:400;
-  letter-spacing: 4.5px;
+  font-size:2em;
+  font-weight:300;
+  letter-spacing: 5.5px;
+  text-shadow:0px 0px 15px #e6b400;
 }
 
 h4 {
-  font-size:1em;
-  font-weight:300;
-  letter-spacing: 3.5px;
+  font-size:1.7em;
+  font-weight:200;
+  letter-spacing: 4px;
+  text-shadow:0px 0px 11px #e6b400;
 }
 
 h5 {
@@ -57,6 +61,7 @@ h6 {
   margin-bottom: 3px;
   padding-bottom: 3px;
   margin-top:15px;
+  text-shadow:0px 0px 1px #fff;
 }
 
 
@@ -67,7 +72,7 @@ header a{
 }
 
 header a:hover{
-  color:rgba(230,180,0,100%);
+  color:rgba(230,180,0,1);
 }
 
 .myname{
@@ -77,7 +82,8 @@ header a:hover{
 
 a{
   text-decoration: none;
-  color:#fff;
+  /*color:#fff;*/
+  color:#F4ECEC;
 }
 
 ul{
@@ -111,6 +117,17 @@ p.imagesubheader{
   /*font-weight: 200;*/
 }
 
+.bolder{
+  font-weight:bolder;
+  color:#fff;
+}
+
+.bubbletext{
+  font-size: 1.2em;
+  letter-spacing: 3px;
+  font-weight: bolder;
+}
+
 /* - SECTIONS: BODY HEADER NAV MODALS- */
 body{
   background-color:#636A7E;
@@ -120,7 +137,7 @@ body{
   letter-spacing: 1.2px;
   font-weight:300;
   font-size:1.1em;
-  color:#fff;
+  color:#F4ECEC;
 }
 
 header{
@@ -159,6 +176,16 @@ header{
   background-repeat: no-repeat;
 }
 
+#about .overlaytext{
+  padding-right: 20%;
+  width:80%;
+}
+
+#projects .overlaytext{
+    display: flex;
+  justify-content:space-between;
+}
+
 .portfoliobody{
   background:url("source/Picture2.png");
   background-size:cover;
@@ -189,7 +216,6 @@ header{
 }
 
 .proj{
-  display: inline-block;
   background-color:transparent;
   text-align:center;
   width:32%;
@@ -203,7 +229,7 @@ header{
   bottom: 0;
   left: 0;
   background-color: transparent;
-  line-height: 100%;
+  /*line-height: 100%;*/
   z-index: 99999;
   opacity:0;
   -webkit-transition: opacity 800ms ease-in;
@@ -250,7 +276,7 @@ header{
   margin-right:auto;
   width:650px;
   padding:1.75% 5%;
-  color:#ffffff;
+  color:#F4ECEC;
 }
 
 .portfolioblock{
@@ -299,11 +325,11 @@ header{
 
 .imagedesc{
   padding-left:2%;
-  border-left:0.25px solid rgba(255,255,255,75%);
+  border-left:0.25px solid rgba(255,255,255,0.75);
   text-align: left;
   width:45%;
   margin:0%;
-  font-weight:100;
+  font-weight:200;
 }
 
 table{
@@ -311,14 +337,14 @@ table{
   font-size: 0.8em;
   width:100%;
   text-align: center;
-  font-weight: 100;
+  font-weight: 200;
   border-collapse:collapse;
   padding:0;
 }
 
 th{
   word-wrap:break-word;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 td{
@@ -326,7 +352,7 @@ td{
 }
 
 .competitivetable tr.xrow:hover{
-  background-color:rgba(255,255,255,10%);
+  background-color:rgba(255,255,255,0.1);
 }
 
 .col1{
@@ -334,11 +360,11 @@ td{
   width: 37.5%;
 }
 
-td.col1{
+.personatable td.col1{
   width: 30%;
 }
 
-td.col2{
+.personatable td.col2{
   text-align: left;  
   width: 70%;
 }
@@ -346,7 +372,7 @@ td.col2{
 .personatable{
   padding: 0;
   margin: 0;
-  vertical-align:;
+  vertical-align:top;
 }
 
 .personatable ul{
@@ -357,8 +383,18 @@ td.col2{
 }
 
 hr{
-  border: 0.25px solid white;
-  width:30%;
+  border: 0.5px solid rgba(255,255,255,0.1);
+  width:15%;
+  display:inline-block;
+  margin-bottom:8.5px;
+}
+
+#projects hr{
+  margin-top:0px;
+  margin-bottom:0px;
+  padding:0px;
+  border: 0.5px solid rgba(255,255,255,0.35);
+  width:25%;
 }
 
 .imagepng{
@@ -367,7 +403,7 @@ hr{
 
 .userjourney{
   font-size: 0.6em;
-  color:#DDD3D3;
+  color:#F4ECEC;
 }
 
 .userjourney th, .userjourney td{
@@ -378,6 +414,10 @@ hr{
 
 .userjourney td{
     text-align: left;
+}
+
+.userjourney td.col1, .userjourney th.col1{
+  width:14%;
 }
 
 /* - ANIMATION - */
@@ -464,7 +504,7 @@ hr{
 }
 
 /* PHONE SUPPORT */
-@media ALL and (max-aspect-ratio: 11/16) and (orientation : portrait){ 
+@media ALL and (max-aspect-ratio: 10/16) { 
   .rotatingwords{
     font-size:calc(100px + 30vw);
   }
@@ -475,4 +515,3 @@ hr{
     font-size:calc(100px + 25vw);
   }
 }
-
