--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ header{
   display:inline-block;
   position:absolute;
   top:50%;
-  color:#fefffe;
+  color:rgba(254,255,254,0.5);
 }
 
 .headerright{
@@ -223,7 +223,7 @@ header{
   color:#fff;
   text-shadow:0px 0px 15px #e6b400;
   position:absolute;
-  bottom:calc(59% + 3.5vw);
+  bottom:calc(60% + 3vw);
 }
 
 .overlaytext{
@@ -346,11 +346,19 @@ header{
 
 .imagedesc{
   padding-left:2%;
-  border-left:0.25px solid rgba(255,255,255,0.75);
+  border-left:0.25px solid #A89988;
   text-align: left;
   width:45%;
   margin:0%;
   font-weight:200;
+}
+
+.protodesc{
+  padding:20px 2% 0 0;
+  /*border-right:0.25px solid #A89988;*/
+  text-align: left;
+  width:45%;
+  margin:0%;
 }
 
 table{
@@ -365,7 +373,14 @@ table{
 
 th{
   word-wrap:break-word;
-  font-weight: 400;
+  font-size:0.95em;
+  font-weight:300;
+  letter-spacing: 2px;
+  margin-bottom: 3px;
+  padding-bottom: 3px;
+  margin-top:15px;
+  color:#B4A491;
+  text-transform: uppercase;
 }
 
 td{
@@ -378,7 +393,11 @@ td{
 
 .col1{
   text-align: left;  
-  width: 37.5%;
+  width: 32%;
+}
+
+.competitivetable /*td.col1*/{
+  font-size: 0.73em;
 }
 
 .personatable td.col1{
@@ -441,30 +460,83 @@ hr{
   width:14%;
 }
 
+.sketches{
+  width:140px;
+}
+
+.wireframes{
+  height:235px;
+  margin-top:4px;
+}
+
+footer{
+  margin-top: 50px;
+  margin-bottom: 150px;
+  color:rgba(254,255,254,0.5);
+  font-size: 0.7em;
+  letter-spacing: 2px;
+  /*text-align: right;
+  width:650px;
+  margin-left: auto;
+  margin-right: auto;
+  padding:0% 5%;*/
+}
+
 /* - ANIMATION - */
 
-.rotatingwords span{
-  position:absolute;
-  left:0;
-  right:0;
-  opacity:0;
+div.sprite1 {
+  width:100%;
+  height:100%;
+  position: absolute;
+  background-image:url("source/Interaction1.svg");
+  background-size:cover;
+  background-position: center;
+  background-repeat: no-repeat;
   -webkit-animation: rotateWord 6.3s linear infinite 0s;
   -ms-animation: rotateWord 6.3s linear infinite 0s;
   animation: rotateWord 6.3s linear infinite 0s;
-  }
+}
 
-.rotatingwords span:nth-child(2) {
+div.sprite2 {
+  opacity:0;
+  width:100%;
+  height:100%;
+  position: absolute;
+  background-image:url("source/Interaction2.svg");
+  background-size:cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  -webkit-animation: rotateWord 6.3s linear infinite 0s;
+  -ms-animation: rotateWord 6.3s linear infinite 0s;
+  animation: rotateWord 6.3s linear infinite 0s;
+}
+
+div.sprite3 {
+  opacity:0;
+  width:100%;
+  height:100%;
+  position: absolute;
+  background-image:url("source/Interaction3.svg");
+  background-size:cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  -webkit-animation: rotateWord 6.3s linear infinite 0s;
+  -ms-animation: rotateWord 6.3s linear infinite 0s;
+  animation: rotateWord 6.3s linear infinite 0s;
+}
+
+.sprite div:nth-child(2){
   -webkit-animation-delay: 2.1s; 
   -ms-animation-delay: 2.1s; 
   animation-delay: 2.1s; 
   }
 
-
-.rotatingwords span:nth-child(3) {
+.sprite div:nth-child(3){
   -webkit-animation-delay: 4.2s; 
   -ms-animation-delay: 4.2s; 
   animation-delay: 4.2s; 
   }
+
 
 @-webkit-keyframes rotateWord {
     0% { opacity: 0; }
@@ -495,44 +567,17 @@ hr{
 }
 
 
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+    0% { opacity: 0; }
+    100% { opacity: 1; }
 }
 
-/* Internet Explorer */
 @-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+@keyframes fadein {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
 }
 
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* PHONE SUPPORT */
-@media ALL and (max-aspect-ratio: 10/16) { 
-  .rotatingwords{
-    font-size:calc(100px + 30vw);
-  }
-}
-
-@media only screen AND (max-device-width : 768px) AND (max-device-width : 1024px) AND (orientation : portrait) { 
-  .rotatingwords{
-    font-size:calc(100px + 25vw);
-  }
-}
