--- a/style.css
+++ b/style.css
@@ -18,11 +18,12 @@ h1, h2, h3, h4 {
 }
 
 h1{
-  font-size:2.9em;
-  font-weight:400;
-  letter-spacing: 5px;
+  font-size:2.6em;
+  font-weight:300;
+  letter-spacing: 5.7px;
   text-shadow:0px 0px 15px #e6b400;
   color:#fff;
+  margin:0.6em 0 0.15em 0;
 }
 
 h2{
@@ -64,6 +65,22 @@ h6 {
   /*text-shadow:0px 0px 1px #fff;*/
   color:#B4A491;
   text-transform: uppercase;
+}
+
+.whitetext{
+  font-size:0.8em;
+  font-weight:300;
+  letter-spacing: 3.5px;
+  line-height: 0;
+  /*color:#B4A491;*/
+  color:#fff;
+  text-transform: uppercase;
+  margin-top:2px;
+}
+
+.whitetext a:hover{
+  font-weight: bolder;
+  color:#F9D6C7;
 }
 
 
@@ -139,7 +156,7 @@ a h4:hover{
 
 /* - SECTIONS: BODY HEADER NAV MODALS- */
 body{
-  background-color:#636A7E;
+  background-color:#4b5160;
   margin:0px;
   padding:0px;
   font-family: omnes-semicond, 'Inter UI', sans-serif;
@@ -202,6 +219,7 @@ header{
   padding-right: 20%;
   padding-top: 2.5%;
   width:80%;
+  margin-top:50px;
 }
 
 #projects .overlaytext{
@@ -210,10 +228,15 @@ header{
   margin-top:100px;
 }
 
+.overlaytext h4{
+  font-size: 1.5em;
+}
+
 .portfoliobodywrapper{
   background:url("source/Picture2.png");
   background-size:cover;
   background-position: center;
+  background-color:#4b5160;
   text-align: center;
   overflow:auto;
 }
@@ -279,6 +302,7 @@ header{
   background:url("source/Picture2.png");
   background-size:cover;
   background-position: center;
+  background-color:#4b5160;
   background-repeat: no-repeat;
 
 }
@@ -312,7 +336,7 @@ header{
 }
 
 .close:hover {
-    background: #636A7E;
+    background: #4b5160;
 }
 
 .portfoliotop, .portfolioblock{
@@ -329,7 +353,7 @@ header{
 }
 
 .portfolioblock{
-  background-color: rgba(39,38,44,0.5);
+  background-color: rgba(39,38,44,0.55);
   padding-bottom:4%;
 }
 
@@ -581,6 +605,83 @@ div.sprite3 {
   animation-delay: 4.2s; 
   }
 
+/* ALL HEADER IMAGES */
+div.headerimage{
+  width:560px;
+  height:360px;
+  margin:-15px auto;
+}
+
+/* CLAIRVOYAGE HEADER IMAGES*/
+div.CVheaderimage1 {
+  width:560px;
+  height:360px;
+  position:absolute;
+  background-image:url("source/CVHeader1.png");
+  background-size:cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  -webkit-animation: headerFade 6s linear infinite 0s;
+  -ms-animation: headerFade 6s linear infinite 0s;
+  animation: headerFade 6s linear infinite 0s;
+  z-index:4;
+}
+
+div.CVheaderimage2 {
+  opacity:0p;
+  width:560px;
+  height:360px;
+  position: absolute;
+  background-image:url("source/CVHeader2.png");
+  background-size:cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  -webkit-animation: headerFade 6s linear infinite 0s;
+  -ms-animation: headerFade 6s linear infinite 0s;
+  animation: headerFade 6s linear infinite 0s;
+    z-index:3;
+}
+
+div.CVheaderimage3 {
+  opacity:0;
+  width:560px;
+  height:360px;
+  position: absolute;
+  background-image:url("source/CVHeader3.png");
+  background-size:cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  -webkit-animation: headerFade 6s linear infinite 0s;
+  -ms-animation: headerFade 6s linear infinite 0s;
+  animation: headerFade 6s linear infinite 0s;
+  z-index:2;
+}
+
+div.CVheaderimage4 {
+  width:560px;
+  height:360px;
+  position:absolute;
+  background-image:url("source/CVHeader1.png");
+  background-size:cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index:1;
+}
+
+.headerimage div:nth-child(2){
+  -webkit-animation-delay: 2s; 
+  -ms-animation-delay: 2s; 
+  animation-delay: 2s; 
+  }
+
+.headerimage div:nth-child(3){
+  -webkit-animation-delay: 4s; 
+  -ms-animation-delay: 4s; 
+  animation-delay: 4s; 
+  }
+
+
+
 
 @-webkit-keyframes rotateWord {
     0% { opacity: 0; }
@@ -609,6 +710,32 @@ div.sprite3 {
     /*90% { opacity: 0; }*/
     100% { opacity: 0; }
 }
+
+/* HEADER IMAGES ANIMATION*/
+@-webkit-keyframes headerFade {
+    0% { opacity: 0; }
+    8.3% { opacity: 1; }
+    33% { opacity: 1; }
+    42% { opacity: 0; }
+    100% { opacity: 0; }
+}
+@-ms-keyframes headerFade {
+    0% { opacity: 0; }
+    8.3% { opacity: 1; }
+    33% { opacity: 1; }
+    42% { opacity: 0; }
+    100% { opacity: 0; }
+}
+@keyframes headerFade {
+    0% { opacity: 0; }
+    8.3% { opacity: 1; }
+    33% { opacity: 1; }
+    42% { opacity: 0; }
+    100% { opacity: 0; }
+} 
+
+
+
 
 
 @-webkit-keyframes fadein {
